# ExtraNotes

./: .gitignore  .gitmodules  CMakeLists.txt  ExtraNotes.jucer  LICENSE.txt  README.md  README.txt  project.config
AUNotes.xcodeproj/: project.pbxproj
AUNotes.xcodeproj/xcshareddata/xcschemes/: AU Lab.xcscheme
Builds/Linux/: Makefile
Builds/MacOSX/: Info.plist
Builds/MacOSX/ExtraNotes.xcodeproj/: project.pbxproj
Builds/MacOSX/ExtraNotes.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Builds/VisualStudio2012/: ExtraNotes.sln  ExtraNotes.vcxproj  ExtraNotes.vcxproj.filters  resources.rc
Graphics/: ConfirmClearDialog.pxm  ExtraNotes.pxm
JuceLibraryCode/: AppConfig.h  JuceHeader.h
Notepad.xcodeproj/: project.pbxproj
Source/: ConfirmClearDialog.cpp  ConfirmClearDialog.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  TextEditorParameter.h
resources/: AUNotes.exp  Info.plist  MainWindow.xib
resources/English.lproj/: InfoPlist.strings
source/: AUNotes.cpp  AUNotes.h  AUNotes.r  AUNotesView.cpp  AUNotesView.h  NoteReader.h  NoteWriter.h  Notepad.cpp  Notepad.exp  Notepad.h  Notepad.r  NotepadView.cpp  NotepadView.h  defaults.h  prefix.pch  version.plist
